--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.3"
   },
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "socket.io": "^2.1.1"
   }
 }
