--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "web_sockets",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js",
+    "heroku-postbuild": "npm install"
   },
   "author": "Rohito",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.3"
   },
   "devDependencies": {
