--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "heroku-postbuild": "npm install"
+    "start": "node server.js"
   },
   "author": "Rohito",
   "license": "ISC",
